src/objects/Inspection__c.object
<CustomObject>
    <fields>
        <fullName>AccountName__c</fullName>
        <formula>Equipment__r.Account__r.Name</formula>
        <label>取引先名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AlertFeed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>￥￥_通知フィード</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CalendarDisplay__c</fullName>
        <formula>AccountName__c  + &apos; &apos; +  ModelName__c  + &apos; &apos; +  Worker__r.LastName  +  Worker__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>カレンダー表示</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CheckSpan__c</fullName>
        <formula>Equipment__r.Model__r.CheckSpan__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>￥￥_点検間隔日数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Completion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>￥￥_点検完了</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EquipmentId__c</fullName>
        <formula>Equipment__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>￥￥_施設レコードId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EquipmentNumber__c</fullName>
        <formula>Equipment__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>施設番号</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equipment__c</fullName>
        <label>点検施設</label>
        <referenceTo>Equipment__c</referenceTo>
        <relationshipLabel>点検予実</relationshipLabel>
        <relationshipName>Inspections</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>InspectionCompleted__c</fullName>
        <formula>OR(

AND(
  RecordType.DeveloperName  = &apos;Solar&apos; ,
 NOT( ISPICKVAL(InspectionRresultA__c , &apos;&apos;) ) ,
 NOT( ISPICKVAL(InspectionRresultB__c , &apos;&apos;) ) ,
 NOT( ISPICKVAL(InspectionRresultC__c , &apos;&apos;) ) 
),
AND(
  RecordType.DeveloperName  = &apos;Air&apos; ,
 NOT( ISPICKVAL(InspectionRresultA__c , &apos;&apos;) ) ,
 NOT( ISPICKVAL(InspectionRresultC__c , &apos;&apos;) ) ,
 NOT( ISPICKVAL(InspectionRresultD__c , &apos;&apos;) ) 
),
AND(
  RecordType.DeveloperName  = &apos;Cogener&apos; ,
 NOT( ISPICKVAL(InspectionRresultA__c , &apos;&apos;) ) ,
 NOT( ISPICKVAL(InspectionRresultB__c , &apos;&apos;) ) ,
 NOT( ISPICKVAL(InspectionRresultD__c , &apos;&apos;) ) 
),
AND(
  RecordType.DeveloperName  = &apos;Storage&apos; ,
 NOT( ISPICKVAL(InspectionRresultA__c , &apos;&apos;) ) ,
 NOT( ISPICKVAL(InspectionRresultD__c , &apos;&apos;) ) 
),
AND(
  RecordType.DeveloperName  = null ,
 NOT( ISPICKVAL(InspectionRresultA__c , &apos;&apos;) ) ,
 NOT( ISPICKVAL(InspectionRresultB__c , &apos;&apos;) ) ,
 NOT( ISPICKVAL(InspectionRresultC__c , &apos;&apos;) ) ,
 NOT( ISPICKVAL(InspectionRresultD__c , &apos;&apos;) ) 
)

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>点検完了</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InspectionDateTime__c</fullName>
        <label>点検日時</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>InspectionNoticesA__c</fullName>
        <label>特記事項A</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InspectionNoticesB__c</fullName>
        <label>特記事項B</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InspectionNoticesC__c</fullName>
        <label>特記事項C</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InspectionNoticesD__c</fullName>
        <label>特記事項D</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InspectionRresultA__c</fullName>
        <label>点検A</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SelectInspectionResult</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>InspectionRresultB__c</fullName>
        <label>点検B</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SelectInspectionResult</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>InspectionRresultC__c</fullName>
        <label>点検C</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SelectInspectionResult</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>InspectionRresultD__c</fullName>
        <label>点検D</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SelectInspectionResult</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LastInspectionDateTime__c</fullName>
        <formula>LastInspection__r.InspectionDateTime__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>前回点検日時</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastInspection__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>前回点検</label>
        <referenceTo>Inspection__c</referenceTo>
        <relationshipLabel>次回点検</relationshipLabel>
        <relationshipName>NextInspections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LastWorker__c</fullName>
        <formula>LastInspection__r.Worker__r.LastName  + &quot; &quot; +  LastInspection__r.Worker__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>前回点検者</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <formula>Equipment__r.Model__r.Manufacturer__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>開発会社</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ModelName__c</fullName>
        <formula>Equipment__r.Model__r.Name</formula>
        <label>施設種別</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUINConfirm__c</fullName>
        <label>押印確認</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Unverified</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PhoneReport__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>電話報告有</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Inspections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>備考</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TablePDFOutput__c</fullName>
        <defaultValue>false</defaultValue>
        <label>点検表PDF出力</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TodayTarget__c</fullName>
        <formula>DATEVALUE(InspectionDateTime__c  ) =  TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>￥￥_本日点検対象</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WorkerName__c</fullName>
        <formula>Worker__r.LastName  +  Worker__r.FirstName</formula>
        <label>点検者名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Worker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>点検者</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Equipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WorkingHours__c</fullName>
        <formula>Equipment__r.WorkingHours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>￥￥_点検時間</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>点検予実</label>
    <listViews>
        <fullName>Air</fullName>
        <columns>NAME</columns>
        <columns>Equipment__c</columns>
        <columns>LastInspection__c</columns>
        <columns>Worker__c</columns>
        <columns>InspectionDateTime__c</columns>
        <columns>InspectionCompleted__c</columns>
        <columns>PhoneReport__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>InspectionRresultA__c</columns>
        <columns>InspectionRresultB__c</columns>
        <columns>InspectionRresultC__c</columns>
        <columns>InspectionRresultD__c</columns>
        <columns>TablePDFOutput__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Inspection__c.Air</value>
        </filters>
        <label>．エアー</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Worker__c</columns>
        <columns>InspectionDateTime__c</columns>
        <columns>OUINConfirm__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <listViews>
        <fullName>Cogener</fullName>
        <columns>NAME</columns>
        <columns>Equipment__c</columns>
        <columns>LastInspection__c</columns>
        <columns>Worker__c</columns>
        <columns>InspectionDateTime__c</columns>
        <columns>InspectionCompleted__c</columns>
        <columns>PhoneReport__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>InspectionRresultA__c</columns>
        <columns>InspectionRresultB__c</columns>
        <columns>InspectionRresultC__c</columns>
        <columns>InspectionRresultD__c</columns>
        <columns>TablePDFOutput__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Inspection__c.Cogener</value>
        </filters>
        <label>．コージェネ</label>
    </listViews>
    <listViews>
        <fullName>Solar</fullName>
        <columns>NAME</columns>
        <columns>Equipment__c</columns>
        <columns>LastInspection__c</columns>
        <columns>Worker__c</columns>
        <columns>InspectionDateTime__c</columns>
        <columns>InspectionCompleted__c</columns>
        <columns>PhoneReport__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>InspectionRresultA__c</columns>
        <columns>InspectionRresultB__c</columns>
        <columns>InspectionRresultC__c</columns>
        <columns>InspectionRresultD__c</columns>
        <columns>TablePDFOutput__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Inspection__c.Solar</value>
        </filters>
        <label>．太陽光</label>
    </listViews>
    <listViews>
        <fullName>Storage</fullName>
        <columns>NAME</columns>
        <columns>Equipment__c</columns>
        <columns>LastInspection__c</columns>
        <columns>Worker__c</columns>
        <columns>InspectionDateTime__c</columns>
        <columns>InspectionCompleted__c</columns>
        <columns>PhoneReport__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>InspectionRresultA__c</columns>
        <columns>InspectionRresultB__c</columns>
        <columns>InspectionRresultC__c</columns>
        <columns>InspectionRresultD__c</columns>
        <columns>TablePDFOutput__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Inspection__c.Storage</value>
        </filters>
        <label>．蓄電</label>
    </listViews>
    <listViews>
        <fullName>View20170923a</fullName>
        <columns>NAME</columns>
        <columns>Worker__c</columns>
        <columns>InspectionDateTime__c</columns>
        <columns>OUINConfirm__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>InspectionCompleted__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>未完了</label>
    </listViews>
    <listViews>
        <fullName>View20171011a</fullName>
        <columns>NAME</columns>
        <columns>Equipment__c</columns>
        <columns>LastInspection__c</columns>
        <columns>Worker__c</columns>
        <columns>InspectionDateTime__c</columns>
        <columns>InspectionCompleted__c</columns>
        <columns>PhoneReport__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>InspectionRresultA__c</columns>
        <columns>InspectionRresultB__c</columns>
        <columns>InspectionRresultC__c</columns>
        <columns>InspectionRresultD__c</columns>
        <columns>TablePDFOutput__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
        </filters>
        <label>．その他</label>
    </listViews>
    <listViews>
        <fullName>View20171011b</fullName>
        <columns>NAME</columns>
        <columns>LastInspection__c</columns>
        <columns>Equipment__c</columns>
        <columns>Worker__c</columns>
        <columns>InspectionDateTime__c</columns>
        <columns>InspectionCompleted__c</columns>
        <columns>PhoneReport__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>InspectionCompleted__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>完了済</label>
    </listViews>
    <nameField>
        <displayFormat>点検-{0000}</displayFormat>
        <label>点検番号</label>
        <type>AutoNumber</type>
    </nameField>
    <recordTypes>
        <fullName>Air</fullName>
        <active>true</active>
        <label>エアー</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cogener</fullName>
        <active>true</active>
        <label>コージェネ</label>
    </recordTypes>
    <recordTypes>
        <fullName>Master</fullName>
        <active>true</active>
        <label>マスター</label>
    </recordTypes>
    <recordTypes>
        <fullName>Solar</fullName>
        <active>true</active>
        <label>太陽光</label>
    </recordTypes>
    <recordTypes>
        <fullName>Storage</fullName>
        <active>true</active>
        <label>蓄電</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>RemarksRequired</fullName>
        <active>true</active>
        <errorConditionFormula>OR(

AND(
 RecordType.DeveloperName = &apos;Solar&apos; ,
 OR(
 AND( NOT( OR(ISPICKVAL(InspectionRresultA__c, &quot;00&quot;), ISPICKVAL(InspectionRresultA__c, &quot;&quot; ) ) ), InspectionNoticesA__c  = &quot;&quot; ) ,
 AND( NOT( OR(ISPICKVAL(InspectionRresultB__c, &quot;00&quot;), ISPICKVAL(InspectionRresultB__c, &quot;&quot; ) ) ), InspectionNoticesB__c  = &quot;&quot; ) ,
 AND( NOT( OR(ISPICKVAL(InspectionRresultC__c, &quot;00&quot;), ISPICKVAL(InspectionRresultC__c, &quot;&quot; ) ) ), InspectionNoticesC__c  = &quot;&quot; ) 
 ) 
) ,
AND(
 RecordType.DeveloperName = &apos;Air&apos; ,
 OR(
 AND( NOT( OR(ISPICKVAL(InspectionRresultA__c, &quot;00&quot;), ISPICKVAL(InspectionRresultA__c, &quot;&quot; ) ) ), InspectionNoticesA__c  = &quot;&quot; ) ,
 AND( NOT( OR(ISPICKVAL(InspectionRresultC__c, &quot;00&quot;), ISPICKVAL(InspectionRresultC__c, &quot;&quot; ) ) ), InspectionNoticesC__c  = &quot;&quot; ) ,
 AND( NOT( OR(ISPICKVAL(InspectionRresultD__c, &quot;00&quot;), ISPICKVAL(InspectionRresultD__c, &quot;&quot; ) ) ), InspectionNoticesD__c  = &quot;&quot; ) 
 ) 
) ,
AND(
 RecordType.DeveloperName = &apos;Cogener&apos; ,
 OR(
 AND( NOT( OR(ISPICKVAL(InspectionRresultA__c, &quot;00&quot;), ISPICKVAL(InspectionRresultA__c, &quot;&quot; ) ) ), InspectionNoticesA__c  = &quot;&quot; ) ,
 AND( NOT( OR(ISPICKVAL(InspectionRresultB__c, &quot;00&quot;), ISPICKVAL(InspectionRresultB__c, &quot;&quot; ) ) ), InspectionNoticesB__c  = &quot;&quot; ) ,
 AND( NOT( OR(ISPICKVAL(InspectionRresultD__c, &quot;00&quot;), ISPICKVAL(InspectionRresultD__c, &quot;&quot; ) ) ), InspectionNoticesD__c  = &quot;&quot; ) 
 ) 
) ,
AND(
 RecordType.DeveloperName = &apos;Storage&apos; ,
 OR(
 AND( NOT( OR(ISPICKVAL(InspectionRresultA__c, &quot;00&quot;), ISPICKVAL(InspectionRresultA__c, &quot;&quot; ) ) ), InspectionNoticesA__c  = &quot;&quot; ) ,
 AND( NOT( OR(ISPICKVAL(InspectionRresultD__c, &quot;00&quot;), ISPICKVAL(InspectionRresultD__c, &quot;&quot; ) ) ), InspectionNoticesD__c  = &quot;&quot; ) 
 ) 
) ,
AND(
 RecordType.DeveloperName = null ,
 OR(
 AND( NOT( OR(ISPICKVAL(InspectionRresultA__c, &quot;00&quot;), ISPICKVAL(InspectionRresultA__c, &quot;&quot; ) ) ), InspectionNoticesA__c  = &quot;&quot; ) ,
 AND( NOT( OR(ISPICKVAL(InspectionRresultB__c, &quot;00&quot;), ISPICKVAL(InspectionRresultB__c, &quot;&quot; ) ) ), InspectionNoticesB__c  = &quot;&quot; ) ,
 AND( NOT( OR(ISPICKVAL(InspectionRresultC__c, &quot;00&quot;), ISPICKVAL(InspectionRresultC__c, &quot;&quot; ) ) ), InspectionNoticesC__c  = &quot;&quot; ) ,
 AND( NOT( OR(ISPICKVAL(InspectionRresultD__c, &quot;00&quot;), ISPICKVAL(InspectionRresultD__c, &quot;&quot; ) ) ), InspectionNoticesD__c  = &quot;&quot; ) 
 ) 
) 


)</errorConditionFormula>
        <errorMessage>点検結果「正常」以外は特記事項を必ず記入してください。</errorMessage>
    </validationRules>
</CustomObject>